# market-analyzer

./: Cargo.toml  menu  menu.c
result_data/: data.txt
src/: chart.py  crypto_price  crypto_price.c  main.rs
src/get_data/: compare_exchanges.rs  error.rs  mod.rs
src/lib/: crypto_price.h  error_handler.c  error_handler.h
